ionic app1 test

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 <body class="ui-mobile-viewport ui-overlay-b">
     <!-- TODO page0 Main -->
-    <div id="page0" data-role="page" class="ui-page ui-page-theme-a ">
+    <div id="page0" data-role="page" class="ui-page ui-page-theme-a">
         <!-- TODO header -->
         <header data-role="header" class="ui-header" data-theme="b">
             <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes">Shoes</a>
@@ -162,14 +162,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -181,14 +181,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -200,14 +200,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -225,14 +225,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -244,14 +244,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -263,14 +263,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -282,14 +282,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -301,14 +301,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -320,14 +320,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -339,14 +339,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -358,14 +358,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -377,14 +377,14 @@
                             <div class="card">
                                 <div class="card-image">
                                     <figure class="image is-2by1">
-                                        <img src="/i1.jpg" alt="Placeholder image">
+                                        <img src="assets/icon/icon.png" alt="Placeholder image">
                                     </figure>
                                 </div>
                                 <div class="card-content">
                                     <div class="media">
                                         <div class="media-content">
-                                            <p class="subtitle is-6">air jordan</p>
-                                            <p class="subtitle is-6">1,000$</p>
+                                            <small>조던</small>
+                                            <small>100$</small>
                                         </div>
                                     </div>
                                 </div>
@@ -412,7 +412,7 @@
                     </a>
                 </p>
                 <p class="ft">
-                    <a href="/">
+                    <a  href="#page0">
                         <img src="icon.png" alt="Made with Bulma" width="25" height="25">
                     </a>
                 </p>
@@ -420,10 +420,10 @@
         </footer>
     </div>
     <!-- TODO page1 Login -->
-    <div id="page1" data-role="page" class="ui-page ui-page-theme-a ">
+    <div id="page1" data-role="page" class="ui-page ui-page-theme-a">
         <!-- TODO page1 header -->
         <header data-role="header" class="ui-header" data-theme="b">
-            <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes" href="/">Shoes</a>
+            <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes"  href="#page0">Shoes</a>
             <h1>대준신발</h1>
             <a data-iconpos="notext" href="#pane2" data-role="button" data-icon="bars"></a>
         </header>
@@ -515,7 +515,7 @@
                     </a>
                 </p>
                 <p class="ft">
-                    <a href="/">
+                    <a  href="#page0">
                         <img src="icon.png" alt="Made with Bulma" width="25" height="25">
                     </a>
                 </p>
@@ -526,7 +526,7 @@
     <div id="page2" data-role="page" class="ui-page ui-page-theme-a ">
         <!-- TODO page2 header -->
         <header data-role="header" class="ui-header" data-theme="b">
-            <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes" href="/">Shoes</a>
+            <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes"  href="#page0">Shoes</a>
             <h1>대준신발</h1>
             <a data-iconpos="notext" href="#pane3" data-role="button" data-icon="bars"></a>
         </header>
@@ -1503,7 +1503,7 @@
                     </a>
                 </p>
                 <p class="ft">
-                    <a href="/">
+                    <a  href="#page0">
                         <img src="icon.png" alt="Made with Bulma" width="25" height="25">
                     </a>
                 </p>
@@ -1511,10 +1511,10 @@
         </footer>
     </div>
     <!-- TODO page3 signup -->
-    <div id="page3" data-role="page" class="ui-page ui-page-theme-a ">
+    <div id="page3" data-role="page" class="ui-page ui-page-theme-a">
         <!-- TODO page3 header -->
         <header data-role="header" class="ui-header" data-theme="b">
-            <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes" href="/">Shoes</a>
+            <a data-iconpos="notext" data-role="button" data-icon="custom" class="custom" title="shoes"  href="#page0">Shoes</a>
             <h1>대준신발</h1>
             <a data-iconpos="notext" href="#pane4" data-role="button" data-icon="bars"></a>
         </header>
@@ -1648,7 +1648,7 @@
                     </a>
                 </p>
                 <p class="ft">
-                    <a href="/">
+                    <a  href="#page0">
                         <img src="icon.png" alt="Made with Bulma" width="25" height="25">
                     </a>
                 </p>
